testsuite/tests/properties/invalid_and_or/logic_all_empty.lkt
import common

class Example: FooNode implements TokenNode {
    @ignored fun f(): Equation = %all()
}
